unpackaged/main/default/objects/project_cloud__Allocation_Skill__c/project_cloud__Allocation_Skill__c.object-meta.xml
<CustomObject>
    <label>Allocation Skill</label>
    <nameField>
        <displayFormat>ASK-{0}</displayFormat>
        <label>Allocation Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>