unpackaged/main/default/objects/project_cloud__Allocation_Skill__c/fields/project_cloud__Allocation_Group__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocation_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The parent Allocation Group of the Allocation Skill, represents the parent Work Type of the skill/secondary Work Type</inlineHelpText>
    <label>Allocation Group</label>
    <referenceTo>project_cloud__Allocation_Group__c</referenceTo>
    <relationshipLabel>Allocation Skills</relationshipLabel>
    <relationshipName>Allocation_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>