unpackaged/main/default/objects/project_cloud__Allocation_Skill__c/fields/project_cloud__Quick_Allocation__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Quick_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Set when a user is allocated to the project using project level resourcing (Quick Subscribe)</inlineHelpText>
    <label>Quick Allocation</label>
    <referenceTo>project_cloud__Quick_Allocation__c</referenceTo>
    <relationshipLabel>Allocation Skills</relationshipLabel>
    <relationshipName>Allocation_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>