unpackaged/main/default/objects/project_cloud__Allocation_Skill__c/fields/project_cloud__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The parent secondary Work Type of the Allocation Skill</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Allocation Skills</relationshipLabel>
    <relationshipName>Allocation_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>